--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,7 +35,7 @@ jobs:
         run: docker buildx build --cache-to=type=local,dest=${{ runner.temp }}/.buildx-cache --cache-from=type=local,src=${{ runner.temp }}/.buildx-cache --target builder -t wp-release:builder .
 
       - name: Build final Docker image
-        run: docker buildx build --cache-from=type=local,src=${{ runner.temp }}/.buildx-cache --target production -t wp-release:${{ env.VERSION }} .
+        run: docker buildx build --cache-to=type=local,dest=${{ runner.temp }}/.buildx-cache --cache-from=type=local,src=${{ runner.temp }}/.buildx-cache --target production -t wp-release:${{ env.VERSION }} .
 
       - name: Security Scan with Trivy
         uses: aquasecurity/trivy-action@master
