--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,7 +3,7 @@ name: E-Commerce container build
 on:
   push:
     branches:
-      - main
+      - development
 
 jobs:
   build:
@@ -26,7 +26,7 @@ jobs:
         run: docker buildx build --target builder -t wp-release:builder .
 
       - name: Build final Docker image (production stage)
-        run: docker buildx build --target production -t wp-release:${{ env.VERSION }} --load  
+        run: docker buildx build --target production -t wp-release:${{ env.VERSION }} .
         # Load the image into the local Docker instance for further use
 
       - name: Security Scan with Trivy
