--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,12 +29,6 @@ jobs:
         run: docker buildx build --target production -t wp-release:${{ env.VERSION }} . --load
         # Load the image into the local Docker instance for further use
 
-      # Tag and push Docker image to local registry
-      - name: Tag and push Docker image
-        run: |
-          docker tag wp-release:${{ env.VERSION }} localhost:5000/wp-release:${{ env.VERSION }}
-          docker push localhost:5000/wp-release:${{ env.VERSION }}
-
       - name: Security Scan with Trivy
         uses: aquasecurity/trivy-action@master
         with:
@@ -43,6 +37,12 @@ jobs:
       - name: Run PHP Unit Tests
         run: |
           docker run --rm wp-release:${{ env.VERSION }} vendor/bin/phpunit --configuration phpunit.xml
+
+      # Tag and push Docker image to local registry (for testing the pipeline without cost)
+      - name: Tag and push Docker image
+        run: |
+          docker tag wp-release:${{ env.VERSION }} localhost:5000/wp-release:${{ env.VERSION }}
+          docker push localhost:5000/wp-release:${{ env.VERSION }}
 
       # - name: Push Docker image to GCR
       #   uses: google-github-actions/auth@v1
