test a whole new setup

--- a/Dockerfile2old
+++ b/Dockerfile2old
@@ -1,7 +1,7 @@
 # Stage 1: Build the WordPress environment
 FROM php:8.2-fpm-alpine AS builder
 
-# Install dependencies for WordPress
+# Install dependencies
 RUN apk add --no-cache \
     libpng-dev \
     libjpeg-turbo-dev \
@@ -14,20 +14,14 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 WORKDIR /var/www/html
 
-# (Optional) Copy the entire application codebase
-# COPY . .
-
-# Copy reelease manifest for release information
-COPY manifest.json .
-
-# Copy the Composer configuration and install dependencies
+# Copy the Composer configuration
 COPY composer.json ./
+
+# Install WordPress dependencies
 RUN composer install --no-dev --optimize-autoloader
 
-# copy the test files
-COPY tests .
-COPY phpunit.xml .
-
+# Copy the WordPress core files
+# COPY . .
 
 # Stage 2: Create the final image
 FROM php:8.2-fpm-alpine AS production
@@ -37,9 +31,6 @@ COPY --from=builder /var/www/html /var/www/html
 
 # Set the working directory
 WORKDIR /var/www/html
-
-# Set correct permissions for WordPress (if necessary)
-RUN chown -R www-data:www-data /var/www/html
 
 # Expose port 9000 and start PHP-FPM
 EXPOSE 9000
