--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Composer settings for the project.",
     "type": "project",
     "require": {
-        "php": "^8.0",
+        "php": "^8.2",
         "johnpbloch/wordpress": "^6.6",
         "wpackagist-plugin/akismet": "^5.3",
         "wpackagist-theme/twentytwentyone": "^2.0",
@@ -11,24 +11,13 @@
         "wpackagist-plugin/wp-native-php-sessions": "^1.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.6"
+        "phpunit/phpunit": "^10.0",
+        "lucatume/wp-browser": "^3.0",
+        "vlucas/phpdotenv": "^5.4"
     },
-    "autoload": {
-        "psr-4": {
-            "wp-ecommerce\\": "src/"
-        }
+    "scripts": {
+        "test": "phpunit"
     },
-    "autoload-dev": {
-    "psr-4": {
-        "wp-ecommerce\\Tests\\": "tests/"
-    }
-    },
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://wpackagist.org"
-        }
-    ],
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
