--- a/composer.json
+++ b/composer.json
@@ -4,16 +4,20 @@
     "type": "project",
     "require": {
         "php": "^8.2",
-        "johnpbloch/wordpress": "^6.6",
+        "johnpbloch/wordpress-core-installer": "^2.0",
+        "johnpbloch/wordpress": "^6.3",
         "wpackagist-plugin/akismet": "^5.3",
         "wpackagist-theme/twentytwentyone": "^2.0",
         "wpackagist-plugin/wp-redis": "^1.4",
         "wpackagist-plugin/wp-native-php-sessions": "^1.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.0",
-        "squizlabs/php_codesniffer": "*",
-        "wp-coding-standards/wpcs": "*"
+        "phpunit/phpunit": "^9.5",
+        "squizlabs/php_codesniffer": "^3.6",
+        "wp-coding-standards/wpcs": "^2.3"
+    },
+    "scripts": {
+        "test": "phpunit"
     },
     "repositories": [
         {
