--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,24 +22,20 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Build Docker image (builder stage)
       - name: Build Docker image (builder stage)
         run: docker buildx build --load --target builder -t wp-release:builder .
 
-      # Run PHPUnit tests using the builder image
-      - name: Run PHP Unit Tests
-        run: docker run --rm wp-release:builder vendor/bin/phpunit --configuration phpunit.xml
-
-      # Build the final Docker image (production stage)
-      - name: Build final Docker image (production stage)
-        run: docker buildx build --target production -t wp-release:${{ env.VERSION }} . --load
-        # Load the image into the local Docker instance for further use
-
-      # Security scan with Trivy
       - name: Security Scan with Trivy
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: wp-release:${{ env.VERSION }}
+          image-ref: wp-release:builder
+      
+      - name: Run PHP Unit Tests
+        run: |
+          docker run --rm wp-release:builder phpunit --configuration phpunit.xml
+
+      - name: Build final Docker image (production stage)
+        run: docker buildx build --load --target production -t wp-release:${{ env.VERSION }} .
 
       # Tag and push Docker image to local registry (for testing the pipeline without cost)
       - name: Tag and push Docker image
