--- a/.github/workflows/ci_dev.yaml
+++ b/.github/workflows/ci_dev.yaml
@@ -3,7 +3,8 @@ name: E-Commerce container build
 on:
   push:
     branches:
-      - main
+      - development
+
 
 jobs:
   build:
@@ -23,7 +24,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Build Docker image (builder stage)
-        run: docker buildx build --load --target builder -t wp-release:builder .
+        run: docker buildx build --load --target builder -t wp-release:builder${{ env.VERSION }} .
 
       - name: Security Scan with Trivy
         uses: aquasecurity/trivy-action@master
@@ -34,15 +35,13 @@ jobs:
         run: |
           docker run --rm -e HTTP_HOST=localhost -e WORDPRESS_DB_HOST=localhost -e WORDPRESS_DB_USER=root -e WORDPRESS_DB_PASSWORD=root wp-release:builder phpunit --configuration phpunit.xml
 
-      - name: Build final Docker image (production stage)
-        run: docker buildx build --load --target production -t wp-release:${{ env.VERSION }} .
+      # Tag and push Docker image to local registry (for testing the pipeline without cost)
+      - name: Tag and push Docker image
+        run: |
+          docker tag wp-release:builder${{ env.VERSION }} localhost:5000/wp-release:builder${{ env.VERSION }}
+          docker push localhost:5000/wp-release:builder${{ env.VERSION }}
 
-      # # Tag and push Docker image to local registry (for testing the pipeline without cost)
-      # - name: Tag and push Docker image
-      #   run: |
-      #     docker tag wp-release:${{ env.VERSION }} localhost:5000/wp-release:${{ env.VERSION }}
-      #     docker push localhost:5000/wp-release:${{ env.VERSION }}
-
+      ## If all goes well, lets deploy it on the cluster
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v0
         with:
@@ -50,34 +49,30 @@ jobs:
           service_account_key: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
           project_id: ${{ secrets.GCP_PROJECT_ID }}
 
-      - name: Docker Tag and push to GCR
-        run: |
-          docker tag wp-release:${{ env.VERSION }} gcr.io/${{ secrets.GCP_PROJECT_ID }}/wp-release:${{ env.VERSION }}
-          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/wp-release:${{ env.VERSION }}
 
       - name: Download Terraform Outputs
         run: |
           gsutil cp gs://abc-tf-outputs-${{ secrets.ENVIRONMENT }}/terraform-outputs-${{ secrets.ENVIRONMENT }}.json .
 
-          - name: Parse Terraform Outputs and Set Environment Variables
-          id: parse_outputs
-          run: |
-            export $(jq -r 'to_entries | .[] | "\(.key)=\(.value)"' terraform-outputs-${{ secrets.ENVIRONMENT }}.json | xargs) > /dev/null 2>&1
-            
-            echo "CLUSTER_CA_CERTIFICATE=$cluster_ca_certificate" >> $GITHUB_ENV
-            echo "CLUSTER_ENDPOINT=$cluster_endpoint" >> $GITHUB_ENV
-            echo "CLUSTER_NAME=$cluster_name" >> $GITHUB_ENV
-            echo "CLUSTER_ZONE=$cluster_zone" >> $GITHUB_ENV
-            echo "GCP_PROJECT_ID=$gcp_project_id" >> $GITHUB_ENV
-            echo "WORDPRESS_USERNAME=$wordpress_username" >> $GITHUB_ENV
-            echo "WORDPRESS_PASSWORD=$wordpress_password" >> $GITHUB_ENV
-            echo "MYSQL_HOST=$mysql_host" >> $GITHUB_ENV
-            echo "MYSQL_INSTANCE_CONNECTION_NAME=$mysql_instance_connection_name" >> $GITHUB_ENV
-            echo "MYSQL_DATABASE_NAME=$mysql_database_name" >> $GITHUB_ENV
-            echo "REDIS_HOST=$redis_host" >> $GITHUB_ENV
-            echo "REDIS_PORT=$redis_port" >> $GITHUB_ENV
-            echo "REDIS_AUTH_PASSWORD=$redis_auth_password" >> $GITHUB_ENV
-
+      - name: Parse Terraform Outputs and Set Environment Variables
+        id: parse_outputs
+        run: |
+          export $(jq -r 'to_entries | .[] | "\(.key)=\(.value)"' terraform-outputs-${{ secrets.ENVIRONMENT }}.json | xargs) > /dev/null 2>&1
+          
+          echo "CLUSTER_CA_CERTIFICATE=$cluster_ca_certificate" >> $GITHUB_ENV
+          echo "CLUSTER_ENDPOINT=$cluster_endpoint" >> $GITHUB_ENV
+          echo "CLUSTER_NAME=$cluster_name" >> $GITHUB_ENV
+          echo "CLUSTER_ZONE=$cluster_zone" >> $GITHUB_ENV
+          echo "GCP_PROJECT_ID=$gcp_project_id" >> $GITHUB_ENV
+          echo "WORDPRESS_USERNAME=$wordpress_username" >> $GITHUB_ENV
+          echo "WORDPRESS_PASSWORD=$wordpress_password" >> $GITHUB_ENV
+          echo "MYSQL_HOST=$mysql_host" >> $GITHUB_ENV
+          echo "MYSQL_INSTANCE_CONNECTION_NAME=$mysql_instance_connection_name" >> $GITHUB_ENV
+          echo "MYSQL_DATABASE_NAME=$mysql_database_name" >> $GITHUB_ENV
+          echo "REDIS_HOST=$redis_host" >> $GITHUB_ENV
+          echo "REDIS_PORT=$redis_port" >> $GITHUB_ENV
+          echo "REDIS_AUTH_PASSWORD=$redis_auth_password" >> $GITHUB_ENV
+      
       - name: Install Helm
         run: |
           curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
@@ -86,21 +81,21 @@ jobs:
         run: |
           cat <<EOF > values.yaml > /dev/null 2>&1
           image:
-            repository: gcr.io/${{ secrets.GCP_PROJECT_ID }}/wp-release:${{ env.VERSION }}
-          replicaCount: 3
+            repository: localhost:5000/wp-release:builder${{ env.VERSION }}
+          replicaCount: 1
           autoscaling:
             enabled: false
-            minReplicas: 3
-            maxReplicas: 6
+            minReplicas: 1
+            maxReplicas: 1
             targetCPU: 80
             targetMemory: 80
           resources:
             limits:
-              memory: 2Gi
-              cpu: 2
-            requests:
               memory: 1Gi
               cpu: 1
+            requests:
+              memory: 512Mi
+              cpu: 500m
           wordpressUsername: $WORDPRESS_USERNAME
           wordpressPassword: $WORDPRESS_PASSWORD
           wordpressEmail: admin@abc-company.com
@@ -114,6 +109,7 @@ jobs:
             port: $REDIS_PORT
             password: $REDIS_AUTH_PASSWORD
           EOF > /dev/null 2>&1
+      
 
       - name: Authenticate to GKE
         run: |
@@ -127,14 +123,4 @@ jobs:
 
       - name: Deploy Helm Chart
         run: |
-          helm upgrade --install wordpress ./helm-chart --values values.yaml -n blue-namespace
-
-      - name: Tag Release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: v${{ env.VERSION }}
-          release_name: "WordPress Release v${{ env.VERSION }}"
-          draft: false
-          prerelease: false
+          helm upgrade --install wordpress ./helm-chart --values values.yaml
